# Mds-Code

./: .gitignore  CMakeLists.txt  MdsCodeConfig.h.in  README.md  install.sh  mdscode.1  mdscode.cpp
.cache/clangd/index/: test.cpp.329D3B859C7A4BF3.idx
Mds_Code/: CMakeLists.txt  Compile.h  CompileAndRun.h  Config.h  Export.h  FileCreation.h  FileNaming.h  INSTALL.txt  Info.h  MdsFile.h  Message.h  compile_commands.json  install.sh  mds_code.cpp  mdscode.1  mdscode.cpp  uninstall.sh
Mds_Code/.cache/clangd/index/: CompileAndRun.h.729B77F32CDEC456.idx  CompileAndRun.h.E2D6726D63EADCC8.idx  Config.h.18122D74AF48750B.idx  Config.h.5D21F647189D6616.idx  Export.h.25E8130FFC59323F.idx  Export.h.88F1EF9489E80207.idx  FileCreation.h.34CDA100C8AC360D.idx  FileCreation.h.D970C3AE50D2A00D.idx  FileNaming.h.7BCE02AB0E14300F.idx  FileNaming.h.7D601BC3B3A32A44.idx  Globals.cpp.481B289EF2F0F8B0.idx  Globals.h.405EDA859FF2C48B.idx  Globals.h.E27B78DD668437B0.idx  Info.h.9F338FD171DD1808.idx  Info.h.E71B57B2E159C09C.idx  (+10 more)
Mds_Code/include/: CompileAndRun.h  Config.h  Message.h  Utils.h
Mds_Code/src/: CMakeLists.txt  Config.cpp  FileFactory.cpp  Globals.cpp  Utils.cpp
Mds_Code/templates/: CompileAndRun.h  Config.cpp  Config.h  Export.h  FileCreation.h  FileNaming.cpp  FileNaming.h  Globals.cpp  Globals.h  Info.h  MdsFile.cpp  MdsFile.h  Message.cpp  Message.h
include/: Export.h  FileFactory.h  Globals.h  Info.h  MdsFile.h  MdsParser.h  SRCodeHandler.h  Utils.h
src/: CMakeLists.txt  Config.cpp  Globals.cpp  MdsFile.cpp  MdsParser.cpp  Message.cpp  Utils.cpp
